Added swagger endpoint for compare (create compare).
